--- a/config.yml
+++ b/config.yml
@@ -33,11 +33,15 @@ steps:
   - type: # the type of action, full list at https://lab.github.com/docs/actions
 
 # Step 2: EDIT HERE -INTERNAL COMMENT FOR STEP 2
- - title: # the title of the step, shown to the learner in the course progress page
-  description: Implement a test # a description of the step, shown to the learner in the course progress page
-  event: status # the event that will trigger the actions to be executed, full list at https://developer.github.com/v3/activity/events/types/
-  actions: # a list of the actions that will occur when the step is triggered by an event
-  - type: # the type of action, full list at https://lab.github.com/docs/actions
+ - title: Assign yourself
+  description: Assign the first issue to yourself.
+  event: issues.assigned
+  link: 'https://github.com/FaisalAfroz/lab-starter/issues/1'
+  actions:
+  - type: gate
+    left: '%payload.pull_request.title%'
+    operator: ===
+    right: Add name to README
 
 # Step 3: EDIT HERE - INTERNAL COMMENT FOR STEP 3
  - title: # the title of the step, shown to the learner in the course progress page
