--- a/config.yml
+++ b/config.yml
@@ -39,9 +39,14 @@ steps:
   link: 'https://github.com/FaisalAfroz/lab-starter/issues/1'
   actions:
   - type: gate
-    left: '%payload.pull_request.title%'
+    left: '%payload.pull_request.base.ref%'
     operator: ===
-    right: Add name to README
+    right: master
+    else:
+    - type: respond
+      with: 01_try-again.md
+  - type: respond
+    with: 01_nice-work.md
 
 # Step 3: EDIT HERE - INTERNAL COMMENT FOR STEP 3
  - title: # the title of the step, shown to the learner in the course progress page
